---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Features:
  Changes:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-07-07
  Features:
    - Blueprints
      - Change circuit signals, station names, filters, colors, and machine recipes in blueprints (via "Blueprint Cloner")
      - Convert blueprints into signals (using constant combinators) (via "Blueprint Signals (continued)")
      - Swap wires, set tiles, quick-grid or configure blueprint (via "Blueprint Tools")
    - Building
      - Reverse entire belt sections via control binding (via "Belt Reverser")
      - Force personal bots to build selected ghost entities (via "Bot Prioritizer")
      - Copy and paste modules alongside crafting machine recipe settings (via "Copy Paste Modules")
      - Transition to ghost in cursor while building, use pipette for tile selections, cycle between item tiers in cursor (via "Cursor Enhancements")
      - Use identical reach range for mining resources (trees/rocks/ores) by hand as for building (via "Far Reach")
      - Keep track of number of ghosts in an area during construction (via "Ghost Counter")
      - Order module insertion/replacement using selection tool with custom presets (via "Module Inserter")
    - Combat
      - Simplified usage of artillery for clearing-out biter nests and map exploration (via "Advanced Artillery Remotes Continued")
      - Alerts for turrets low on ammo (via "Ammo Alerts")
    - Controls
      - [OPTIONAL] Modpack controls configuration
      - Distribute items evenly across machines (via "Even Distribution")
      - Export and import quickbars configuration (via "Quickbar Templates")
      - Swap back and forth first five and last five items in quickbar for easier access (via "Quick Swap")