@@ -3,6 +3,7 @@ Version: 999.999.999
 Date: 9999-99-99
   Features:
   Changes:
+    - Cleanup range for Even Distribution mod has been limited to default character reach through map settings (make sure to reset the mod setting if necessary).
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
